# unmeasured_confounding_checker

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
dashboard/: app.py
data/: make_sample.py  sample_data.csv
docker/: Dockerfile  docker-compose.yml
src/api/: main.py
src/core/: estimators.py  learners.py  pipeline.py  schemas.py
src/core/sensitivity/: evalue.py  learner_compare.py  orchestrator.py  placebo.py
tests/: __init__.py  test_api.py  test_sensitivity.py
