[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unmeasured_confounding_checker"
version = "0.1.0"
description = "Unmeasured Confounding Analysis as a Service for ATE estimation with DoubleML"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "doubleml>=0.9",
    "xgboost>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "mlflow>=2.15",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.37",
    "plotly>=5.22",
    "requests>=2.31",
]
agent = [
    "pydantic-ai>=0.1",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]
all = [
    "unmeasured_confounding_checker[dashboard,agent,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
env = [
    "KMP_DUPLICATE_LIB_OK=TRUE",
]